clean blog: Fix wide navbar floating far below the top When the navigation had many or long links, the right part gets placed below the left part of the header. In that case the translate3d approach did not work anymore, instead of the whole header appearing at the very top of the viewport it appeared with a big gap further below. Just setting the top property to 0 instead fixed this behaviour in my tests.

--- a/templates/clean-blog/style.css
+++ b/templates/clean-blog/style.css
@@ -137,11 +137,7 @@ ul a {
   }
   .navbar-custom.is-visible {
     /* if the user changes the scrolling direction, we show the header */
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    -o-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    top: 0;
   }
 }
 .intro-header {
